<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorLightBlue"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clipToPadding="true"
        android:padding="16dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_gravity="center"
            android:id="@+id/role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:tag="@string/leader"
                android:id="@+id/exact_date_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:buttonTint="@color/colorPrimaryDark"
                android:checked="true"
                android:padding="8dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:text="@string/leader"
                android:textSize="16sp" />

            <RadioButton
                android:tag="@string/follower"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:id="@+id/exact_date_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:buttonTint="@color/colorPrimaryDark"
                android:checked="false"
                android:padding="8dp"
                android:text="@string/follower"
                android:textSize="16sp" />
        </RadioGroup>

        <EditText
            android:text="0"
            android:visibility="gone"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_bg"
            android:padding="8dp"
            android:id="@+id/table_number"
            android:hint="@string/table_number"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="6dp"
            app:elevation="6dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:id="@+id/unregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/unregister"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="6dp"
        app:elevation="6dp" />

    </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>