<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:clipToPadding="true"
    android:layout_margin="8dp"
    android:padding="16dp"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:padding="6dp"
        android:weightSum="4"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/oc"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textAllCaps="true" />

        <TextView
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lay"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textAllCaps="true" />


        <TextView
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textAllCaps="true" />

        <TextView
            android:gravity="center"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textAllCaps="true" />

    </LinearLayout>

</androidx.cardview.widget.CardView>