<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:clipToPadding="true"
    android:layout_margin="8dp"
    android:padding="16dp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:weightSum="4"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:singleLine="true"
                android:textStyle="bold"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:text="@string/marker_oc_number"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/oc_number"
                android:layout_width="0dp"
                android:text="sdfsdfs"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:singleLine="true"
                android:textStyle="bold"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:text="@string/marker_item_code"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/item_code"
                android:layout_width="0dp"
                android:text="sdfsdfs"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:text="@string/marker_item_description"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="0dp"
                android:text="sdfsdfs"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:text="@string/marker_shrinkage"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/shrinkage"
                android:layout_width="0dp"
                android:text="sdfsdfs"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>