<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context=".ui.leader.LeaderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_leader_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/app_name"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightBlue"
        >

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clipToPadding="true"
                android:padding="16dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="6dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_margin="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_marginStart="48dp"
                            android:layout_marginLeft="48dp"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:background="@drawable/rounded_bg"
                                android:padding="16dp"
                                android:id="@+id/oc_no_edit"
                                android:hint="@string/hint_oc_number"
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                            <RelativeLayout
                                android:layout_marginTop="16dp"
                                android:background="@drawable/rounded_bg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <Spinner
                                    android:id="@+id/fit_type_spinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"/>

                            </RelativeLayout>

                        </LinearLayout>

                        <ImageView
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:id="@+id/feedback_icon"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:visibility="invisible"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            app:srcCompat="@drawable/ic_check" />

                    </LinearLayout>

                    <Button
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center"
                        android:id="@+id/submit_oc_style_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/markers_container"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:paddingBottom="48dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/select_marker"
                        android:layout_margin="12dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        android:id="@+id/marker_recycler_view"
                        tools:listitem="@layout/marker_item" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </FrameLayout>

    <include layout="@layout/followers_jobs_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>